Software/PSOC/Projekt_PSoC_Kode/Projekt_PSoC_Kode.cydsn/BUILD.log
--------------- Build Started: 05/21/2019 14:45:29 Project: Projekt_PSoC_Kode, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -x c++ -std=c++1z -fno-exceptions -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from main.c:20:0:
MotorController.h: In function 'int main()':
MotorController.h:50:9: error: 'void MotorController::GoForward(int)' is private
    void GoForward(int pwm = 0);
         ^
main.c:112:34: error: within this context
                 Motor.GoForward(0);
                                  ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/21/2019 14:45:30 ---------------
